# desafio_bairesdev_embedded_vision_project_LMB

./: .gitattributes  .gitignore  .gitmodules  Cópia_de_Etapa_Consolidar_Visão_Computacional_aplicada_ao_reconhecimento_de_emoções.ipynb  README.md  env_improved.sh  requirements.txt
pico_inference_project/: CMakeLists.txt  build_safe.sh  build_safe.txt  build_safe_udp.sh  env.sh  pico_inference_project.c  pico_inference_project.cpp  toolchain-arm-none-eabi.cmake
pico_inference_project/auto_tools/: CMakeLists.txt.bak  CMakeLists_versao.txt  boot2_w25q080.bin.bak  fix_flatbuffers_and_rebuild.sh  update_tflm_schema.sh  verifica_schema.sh
pico_inference_project/include/: inference.h  lwipopts.h
pico_inference_project/lib/ssd1306/: CMakeLists.txt  font8x8_basic.c  font8x8_basic.h  ssd1306.c  ssd1306.h
pico_inference_project/lib/ssd1306.bak/: CMakeLists.txt
pico_inference_project/src/: image_provider.cpp  image_provider.h  inference.cpp  inference.h  model_data.c  model_data.cc  model_data.cc.quant.errado  model_data.h  model_data_v_600k.cc  model_settings.h  modelo_expressoes.tflite  modelo_expressoes_v_6006k.tflite
src/pi_camera_capture/: camera_trigger_uart.py  camra_trigger_uart.py  send_uart_signal.py  test_camera.py  test_camera_fixed.py  test_camera_subprocess.py  test_camera_subprocess_v1.py  test_cameras_all_ports.py  test_usb_camera.py
